tests/resource/valid/control_flow/match_dont_remove_shadowed.mamba
def n := 10

match 10
    n =>
        print("10")

print(n)
