tests/resource/invalid/type/control_flow/different_type_shadow.mamba
match 10
    n =>
        print(x)
